Initial Commitby iOS

--- a/MoneyJars.iOS/MoneyJars.iOS.csproj
+++ b/MoneyJars.iOS/MoneyJars.iOS.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
         <Platform Condition=" '$(Platform)' == '' ">iPhoneSimulator</Platform>
-        <ProjectGuid>{BE663E5F-EF59-4501-81A4-F9A48889DDE4}</ProjectGuid>
+        <ProjectGuid>{4FCB8288-3C80-44A2-AD7C-DAFC8D111F71}</ProjectGuid>
         <ProjectTypeGuids>{FEACFBD2-3405-455C-9665-78FE426C6842};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
         <TemplateGuid>{edc1b0fa-90cd-4038-8fad-98fe74adb368}</TemplateGuid>
         <OutputType>Exe</OutputType>
@@ -68,9 +68,6 @@
     </ItemGroup>
     <ItemGroup>
       <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
-      <PackageReference Include="MvvmCross">
-        <Version>6.4.1</Version>
-      </PackageReference>
     </ItemGroup>
     <ItemGroup>
         <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Contents.json">
@@ -122,6 +119,7 @@
         <Folder Include="Delegates\" />
         <Folder Include="Helper\" />
         <Folder Include="Other\" />
+        <Folder Include="Properties\" />
         <Folder Include="Sources\" />
         <Folder Include="Views\" />
     </ItemGroup>
@@ -144,7 +142,7 @@
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\MoneyJars.Core\MoneyJars.Core.csproj">
-        <Project>{1BA8BA4C-7F61-4A45-A0E8-32B6E80C9F25}</Project>
+        <Project>{4DF6B3EC-B83D-433A-8ACF-C6F76B1CB6F3}</Project>
         <Name>MoneyJars.Core</Name>
       </ProjectReference>
     </ItemGroup>
