Initial Commit by iOS

--- a/Mobile/MoneyJars/MoneyJars.Core/MoneyJars.Core.csproj
+++ b/Mobile/MoneyJars/MoneyJars.Core/MoneyJars.Core.csproj
@@ -11,4 +11,7 @@
     <Folder Include="Services\" />
     <Folder Include="ViewModels\" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="MvvmCross" Version="6.4.1" />
+  </ItemGroup>
 </Project>
