--- a/Mobile/MoneyJars/MoneyJars.Core/MoneyJars.Core.csproj
+++ b/Mobile/MoneyJars/MoneyJars.Core/MoneyJars.Core.csproj
@@ -13,5 +13,13 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MvvmCross" Version="6.4.1" />
+    <PackageReference Include="Microsoft.Net.Http" Version="2.2.29" />
+    <PackageReference Include="Xam.Plugins.Settings" Version="3.1.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Xamarin.iOS">
+      <HintPath>..\..\..\..\..\Library\Frameworks\Xamarin.iOS.framework\Versions\13.10.0.17\lib\mono\Xamarin.iOS\Xamarin.iOS.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
