--- a/Mobile/MoneyJars/MoneyJars.iOS/MoneyJars.iOS.csproj
+++ b/Mobile/MoneyJars/MoneyJars.iOS/MoneyJars.iOS.csproj
@@ -71,6 +71,9 @@
       <PackageReference Include="MvvmCross">
         <Version>6.4.1</Version>
       </PackageReference>
+      <PackageReference Include="Newtonsoft.Json">
+        <Version>12.0.3</Version>
+      </PackageReference>
     </ItemGroup>
     <ItemGroup>
         <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Contents.json">
